Render package.json Anpassung

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "watch": "nodemon server.js",
     "clean": "node seeding/clean_db.js",
     "seed": "node seeding/seed_db.js"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
