--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@faker-js/faker": "^7.6.0",
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.34.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -19,8 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "start": "node server.js",
